Fix description text not wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,8 +59,10 @@ p, h1 {
 }
 
 #content-description {
-  width: 80ch;
+  max-width: 80ch;
   margin-bottom: 1rem;
+  text-wrap: balance;
+  word-break:break-all;
 }
 
 #content-list {
